@@ -1,6 +1,6 @@
 {
-  "count": 25,
-  "uniques": 11,
+  "count": 26,
+  "uniques": 12,
   "views": [
     {
       "timestamp": "2022-03-17T00:00:00Z",
@@ -39,8 +39,8 @@
     },
     {
       "timestamp": "2022-03-28T00:00:00Z",
-      "count": 4,
-      "uniques": 2
+      "count": 5,
+      "uniques": 3
     }
   ]
 }
